Fix bug where "My packages" link was not working. Simplified the code behind that link to take advantage of the new User Model and its dedicated search Model

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -1142,6 +1142,9 @@ textarea.token{
 	-moz-border-radius: 3px;
 	font-size: 14px;
 }
+.current-filter > .icon{
+	margin-left: 5px;
+}
 /*-- The filter checkboxes --*/
 #includes-files label{
  	font-size: 13px;
